used react query for fetch pdf list, fix scroll hidden when content overflow, made titlebar sticky on scroll

--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@
     overscroll-behavior: none;
     min-height: 100vh;
     min-width: 100vw;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
   }
 
